# rust_GrandiOS

./: README.md
Aufgaben/: .gitignore  a1.tex  a2.tex  a3.tex  a4.tex  a5.tex  preamble.tex
GrandiOS/: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  armv4t-none-eabi.json  kernel_build.sh  kernel_dump.sh  linker.lds  setup_env.sh  update_env.sh
GrandiOS/aids/: Cargo.toml
GrandiOS/aids/src/: allocator.rs  lib.rs
GrandiOS/kernels/: kernel_01  kernel_02  kernel_04
GrandiOS/shell/: .gitignore  Cargo.toml  linker.lds  shell
GrandiOS/shell/src/: lib.rs
GrandiOS/shell/src/commands/: barry.rs  bool.rs  cache.rs  cat.rs  colors.rs  cowsay.rs  edit.rs  exit.rs  higher.rs  htop.rs  led.rs  list.rs  logo.rs  math.rs  spot.rs  u3.rs  u5.rs
GrandiOS/shell/src/utils/: evaluate.rs  parser.rs  prelude.txt  spinlock.rs  vt.rs
GrandiOS/src/: lib.rs  logo.txt  name.txt
GrandiOS/src/commands/: cat.rs  cowsay.rs  edit.rs  higher.rs  logo.rs  math.rs  test.rs
GrandiOS/src/driver/: interrupts.rs  led.rs  logo.rs  memory_controller.rs  power_management.rs  rtc.rs  serial.rs  system_timer.rs
GrandiOS/src/utils/: allocator.rs  irq.rs  parser.rs  registers.rs  ring.rs  scheduler.rs  shell.rs  spinlock.rs  syscalls.rs  thread.rs  vt.rs
GrandiOS/src/utils/exceptions/: common_code.rs  data_abort.rs  irq.rs  prefetch_abort.rs  software_interrupt.rs  undefined_instruction.rs
GrandiOS/swi/: Cargo.toml
GrandiOS/swi/src/: lib.rs
GrandiOS/vt/: Cargo.toml
GrandiOS/vt/src/: lib.rs
