[package]
name = "GrandiOS"
version = "0.1.0"
authors = ["build"]

[lib]
crate-type = ["staticlib"]

[dependencies]
swi = { path = "./swi" }
aids = { path = "./aids" }
shell = { path = "./shell" }
vt = { path = "./vt" }
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
