[package]
name = "GrandiOS"
version = "0.1.0"
authors = ["build"]

[lib]
crate-type = ["staticlib"]

[dependencies]
swi = { path = "./swi" }
aids = { path = "./aids" }
vt = { path = "./vt" }
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
serde = { version = "1.0.23", default-features = false, features = ["derive", "alloc"] }
serde_derive = { version = "1.0.23", default-features = false }
corepack = { version = "~0.3.0", default-features = false, features = ["alloc"] }
rlibc = "1.0.0"
